# swagger.yaml
@@ -31,7 +31,7 @@ paths:
                 type: number
               cpf:
                 type: string
-              address:
+              endereco:
                 type: object
                 properties:
                   street:
@@ -412,6 +412,91 @@ paths:
           description: Requisição inválida
         '401':
           description: Não autorizado
-  
-
-
+  /user/create:
+    post:
+      tags:
+        - User
+      summary: Cria um novo usuário
+      consumes:
+        - application/json
+      produces:
+        - application/json
+      parameters:
+        - in: body
+          name: body
+          description: Informações do usuário a ser criado
+          required: true
+          schema:
+            type: object
+            properties:
+              name:
+                type: string
+              age:
+                type: number
+              cpf:
+                type: string
+              email:
+                type: string
+              password:
+                type: string
+      responses:
+        201:
+          description: Usuário criado com sucesso
+        400:
+          description: Parâmetros inválidos
+        500:
+          description: Erro interno no servidor
+  /user/edit:
+    put:
+      tags:
+        - User
+      summary: Edita  Usuário Logado
+      consumes:
+        - application/json
+      produces:
+        - application/json
+      parameters:
+        - in: body
+          name: body
+          description: Informações do cliente a ser criado
+          required: true
+          schema:
+            type: object
+            properties:
+              name:
+                type: string
+              age:
+                type: number
+              cpf:
+                type: string
+              email:
+                type: string
+              password:
+                type: string
+      security:
+        - Token: []
+      responses:
+        201:
+          description: Usuário editado com sucesso
+        400:
+          description: Parâmetros inválidos
+        500:
+          description: Erro interno no servidor
+  /user/delete:
+    delete:
+      tags:
+        - User
+      summary: Deleta o Usuário Logado
+      consumes:
+        - application/json
+      produces:
+        - application/json
+      security:
+        - Token: []
+      responses:
+        201:
+          description: Usuário deletado com sucesso
+        400:
+          description: Parâmetros inválidos
+        500:
+          description: Erro interno no servidor
